--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,19 @@
   @tailwind components;
   @tailwind utilities;
 
+  @font-face {
+  font-family: "Metropolis";
+  src: url("/font/Metropolis1920-Regular.otf") format("opentype");
+}
+ @font-face {
+  font-family: "Miniver";
+  src: url("/font/Miniver-Regular.ttf") format("truetype");
+}
+
 .bg-custom-gradient {
   background-image: linear-gradient(to right, #1a202c, #083833);
 }
 .bg-custom-background {
   background-image: linear-gradient(to right, #0e1118, #06201e);
 }
+
